--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Siyu Chen Portfolio</title>
-        <link rel="icon" type="image/png" href="/images/favicon.png">
+        <link rel="icon" type="image/png" href="C:\Users\wangl\OneDrive\Desktop\99\web\icon.png">
     </head>
     
     <body style="background-color:rgb(247, 181, 192);">
