--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Siyu Chen Portfolio</title>
-        <link rel="icon" type="image/png" href="C:\Users\wangl\OneDrive\Desktop\99\web\icon.png">
+        <link rel="icon" type="image/png" href="icon.ico">
     </head>
     
     <body style="background-color:rgb(247, 181, 192);">
@@ -17,7 +17,7 @@
             <a href="https://drive.usercontent.google.com/download?id=1bdOsRhbo-AmY_RA5kCd5RdPreoI8zkdw&export=download&authuser=0&confirm=t&uuid=5d77d08b-f027-4ca2-9a85-cd2ee98aafa0&at=AN8xHop6V-QJL-gpTSFMOa5qyfIM:1758773759439" download>Version 6 (20250903) HTML formate download link</a>
 
         
-        <h2 style="text-align:center;">Preview</h2>
-        <embed src="https://github.com/wlyhhhhhhhhhhhhhhhhhhhaaaaaaaaa/qc99-/blob/main/%EF%BC%88%E5%B7%B2%E5%8E%8B%E7%BC%A9%EF%BC%89Alicia%20Chen%20portfolio%20version6%2020250903.pdf" type="application/pdf" width="600" height="400">
+        <h2 style="text-align:center;">Online Reader</h2>
+        <embed src="Alicia Chen portfolio version6 20250903.pdf" type="application/pdf" width="600" height="400">
     </body>
 </html>
