--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body style="background-color:rgb(238,219,215);">
         <h1 style="text-align:center;">Introduction</h1>
         <h2 style="text-align:center;">PORTFOLIO</h2>
-            <a href="https://drive.usercontent.google.com/u/0/uc?id=1AbPKqf-L0Sgv9Q2MYxB5Xh9LcpSiWM80&export=download" download>Version 6 (20250903) PDF formate download link</a>
+            <a href="https://drive.usercontent.google.com/u/0/uc?id=1AbPKqf-L0Sgv9Q2MYxB5Xh9LcpSiWM80&export=download" download>Siyu Chen Portfolio (PDF)</a>
             <br>
             <br>
-            <a href="https://drive.usercontent.google.com/download?id=1bdOsRhbo-AmY_RA5kCd5RdPreoI8zkdw&export=download&authuser=0&confirm=t&uuid=5d77d08b-f027-4ca2-9a85-cd2ee98aafa0&at=AN8xHop6V-QJL-gpTSFMOa5qyfIM:1758773759439" download>Version 6 (20250903) HTML formate download link</a>
+            <a style="text-align:center;" href="https://drive.usercontent.google.com/download?id=1bdOsRhbo-AmY_RA5kCd5RdPreoI8zkdw&export=download&authuser=0&confirm=t&uuid=5d77d08b-f027-4ca2-9a85-cd2ee98aafa0&at=AN8xHop6V-QJL-gpTSFMOa5qyfIM:1758773759439" download>Siyu Chen Portfolio (HTML)</a>
 
         
         <h3 style="text-align:center;">Online Reader</h3>
