--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Siyu Chen Website</title>
-        <link rel="icon" type="ico" href="icon.ico">
+        <link rel="icon" type="image/x-icon" href="icon.ico">
     </head>
     
     <body style="background-color:rgb(238,219,215);">
@@ -30,3 +30,4 @@
         <h4>Contact</h4>
     </body>
 </html>
+
