--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             <embed style="text-align:center;" src="Alicia Chen portfolio version6 20250903.pdf" type="application/pdf" width="600" height="400">
         </div>
         
-        <div class="center">
+        <!-- <div class="center">
             <h4>Contact</h4>
-        </div>
+        </div> -->
     </body>
 </html>
+
 
