--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <!-- part:pdf -->
             <img src="icon_pdf.png" alt="PDF" width="70" height="70"><br>
 
-            <a href="https://drive.usercontent.google.com/u/0/uc?id=1AbPKqf-L0Sgv9Q2MYxB5Xh9LcpSiWM80&export=download" download>
+            <a href="https://drive.usercontent.google.com/download?id=1AbPKqf-L0Sgv9Q2MYxB5Xh9LcpSiWM80&export=download&authuser=0&confirm=t&uuid=1ae7a0bf-fd40-442e-91f5-6b77a75268bd&at=AN8xHopB0U9FdATJXXNzBiSzff_S:1758810749084" download>
                 <img src="icon_download.png" alt="icon_download" width="11" height="11">
             </a>
 
-            <a href="Alicia Chen portfolio version6 20250903.pdf" target="_blank">
+            <a href="Alicia-Siyu-Chen.pdf" target="_blank">
                 <img src="icon_link.png" alt="icon_link" width="10" height="10">
             </a>
             <br><br>
@@ -45,12 +45,19 @@
             <img src="icon_html.png" alt="HTML" width="54" height="70">
             <br>
 
-            <a href="https://drive.usercontent.google.com/download?id=1bdOsRhbo-AmY_RA5kCd5RdPreoI8zkdw&export=download&authuser=0&confirm=t&uuid=5d77d08b-f027-4ca2-9a85-cd2ee98aafa0&at=AN8xHop6V-QJL-gpTSFMOa5qyfIM:1758773759439" download>
+            <a href="https://drive.usercontent.google.com/download?id=1bcKVq1R_WtYeLVhSz1pnbn7pKYK_noSZ&export=download&authuser=0&confirm=t&uuid=915c3c25-d21b-4a0a-99fc-acf3f410412a&at=AN8xHoq8k9mIeh3On0zeU3GCpn9e:1758810626394" download>
                 <img src="icon_download.png" alt="icon_download" width="11" height="11">
             </a>
-            <a href="Alicia Chen portfolio version6 20250903.html" target="_blank">
+            <a href="Alicia-Siyu-Chen.html" target="_blank">
                 <img src="icon_link.png" alt="icon_link" width="10" height="10">
             </a>
+            <br><br>
+            <!-- part:epub -->
+            <img src="icon_epub.png" alt="EPUB" width="70" height="70">
+            <br>
+
+            <a href="https://drive.usercontent.google.com/download?id=12v3f48rCRFjWg4Vf_g2PAdot2Hifvbiy&export=download&authuser=0&confirm=t&uuid=af272633-428b-4042-9774-60aabeb09d27&at=AN8xHopefNbyRapO7R99R5ISr_gO:1758810719445" download>
+                <img src="icon_download.png" alt="icon_download" width="11" height="11">
         </div>
             <!-- <embed style="text-align:center;" src="Alicia Chen portfolio version6 20250903.pdf" type="application/pdf" width="80%" height="700px"> -->
 
