--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         footer {
             text-align: center;
             font-size: 11px;
-            color: #EA8869;
+            color: #a88077;
         }
 
         .footer-bar {
             padding: 10px 0;
             background: linear-gradient(
                 to right,
-                #F7C4AC,
-                #D6D5C4,
-                #F7C4AC
+                #eeb5a9,
+                #eec3a9,
+                #eeb5a9
             ); 
             font-weight: bold;
             letter-spacing: 1.5px;
