--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
         <title>SiyuChen</title>
         <link rel="icon" type="image/x-icon" href="icon.ico">
         <style>
+        
+        @font-face {
+            font-family: Milk_And_Honey;
+            src: url("Milk And Honey.ttf");
+        }
         body {
             background-color: rgb(238,219,215);
-            font-family: 'Times New Roman', Times, serif;
+            font-family: Milk_And_Honey;
+            letter-spacing: 1.5px;
         }
         .center {
             text-align: center;
@@ -50,11 +56,11 @@
         <div class="center">
             <h2>
                 <p style="text-align:center; font-size: 20px;">Siyu Chen</p>
-                <p style="text-align:center; font-size: 30px;">PORTFOLIO</p>
+                <p style="text-align:center; font-size: 30px; letter-spacing: 5px;">PORTFOLIO</p>
                 
             </h2>
             <br>
-            <h3 style="text-align: center; font-size: medium;"> FILES </h3>
+
             <!-- part:pdf -->
             <img src="icon_pdf.png" alt="PDF" width="70" height="70"><br>
 
